syntax = "proto3";

option csharp_namespace = "MicroserviceDemo.DiscountgRPC.Protos";

service DiscountProtoService
{
	rpc GetDiscountByProductId(GetDiscountByProductIdRequest) returns (CouponReturns);
	rpc CreateDiscount(CreateDiscountRequest) returns (CouponReturns);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponReturns);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountReturns);
}

message GetDiscountByProductIdRequest
{
	string product_id = 1;
}

message CouponReturns 
{
	int32 id = 1;
	string product_id = 2;
	string product_name = 3;
	string discription = 4;
	double amount = 5;
}

message CreateDiscountRequest 
{
	int32 id = 1;
	string product_id = 2;
	string product_name = 3;
	string discription = 4;
	double amount = 5;
}

message UpdateDiscountRequest
{
	int32 id = 1;
	string product_id = 2;
	string product_name = 3;
	string discription = 4;
	double amount = 5;
}

message DeleteDiscountRequest
{
	string product_id = 1;
}

message DeleteDiscountReturns
{
	bool success = 1;
}